feat: client with addres and departments
