# app/Http/Resources/ClientResource.php
@@ -18,6 +18,13 @@ use Illuminate\Http\Resources\Json\JsonResource;
  *     @OA\Property(property="flyer_bienvenida", type="string", example="https://develop.garzasoft.com/storage/logo.png"),
  *     @OA\Property(property="flyer_informativo", type="string", example="https://develop.garzasoft.com/storage/logo.png"),
  *     @OA\Property(property="type", type="string", example="News description"),
+ *     @OA\Property(property="comment", type="object",
+ *         @OA\Property(property="text", type="string", example="News description"),
+ *         @OA\Property(property="author", type="string", example="News description"),
+ *         @OA\Property(property="position", type="string", example="News description"),
+ *     ),
+ *     @OA\Property(property="departments", ref="#/components/schemas/DepartmentResourceCollection"),
+ *     @OA\Property(property="addresses", ref="#/components/schemas/AddressResourceCollection"),
  * )
  *
  * @OA\Schema(
@@ -34,9 +41,7 @@ class ClientResource extends JsonResource
         return [
             'id' => $this->id,
             'nombre' => $this->nombre,
-            'direccion' => $this->direccion,
             'logo' => $this->logo ? asset('storage/' . $this->logo) : null,
-            'departamento' => $this->departamento,
             'imagen_referencia' => $this->imagen_referencia ? asset('storage/' . $this->imagen_referencia) : null,
             'flyer_bienvenida' => $this->flyer_bienvenida ? asset('storage/' . $this->flyer_bienvenida) : null,
             'flyer_informativo' => $this->flyer_informativo ? asset('storage/' . $this->flyer_informativo) : null,
@@ -46,6 +51,8 @@ class ClientResource extends JsonResource
                 'author' => $this->comment->person,
                 'position' => $this->comment->position,
             ] : null,
+            'departments' => DepartmentResource::collection($this->whenLoaded('departments')),
+            'addresses' => AddressResource::collection($this->whenLoaded('addresses')),
         ];
     }
 }
